fixed education page spacing

--- a/pages/our_causes/education/assets/css/style.css
+++ b/pages/our_causes/education/assets/css/style.css
@@ -5657,10 +5657,10 @@ blockquote.vs-quote span::before {
 }
 
 .about-box2 {
-  max-width: 100%;   /* or any width you want */
-  padding: 0px 80px;    /* optional: adds padding on smaller screens */
-  margin-top: 50px;
-  margin-bottom: 40px;
+  max-width: 100%;
+  padding: 0px 6%;
+  margin-top: 3%;
+  margin-bottom: 3%;
   text-align: justify;
 }
 
